--- a/templates/chat.html
+++ b/templates/chat.html
@@ -14,11 +14,11 @@
 							<div class="card-header msg_head">
 								<div class="d-flex bd-highlight">
 									<div class="img_cont">
-										<img src="./chatlogo.jpeg" class="rounded-circle user_img">
+										<img src="https://res.cloudinary.com/dxz57onca/image/upload/v1702957345/Pizzas/mtxyvxmdzgjfrmwr1beo.jpg" class="rounded-circle user_img">
 										<span class="online_icon"></span>
 									</div>
 									<div class="user_info">
-										<span>Medic-Bot</span>
+										<span><b>Medic-Bot</b></span>
 										<p>How may I help you?</p>
 									</div>
 								</div>
