--- a/static/stylechat.css
+++ b/static/stylechat.css
@@ -40,10 +40,12 @@ body {
 
 .text{
 	color: white;
-	font-size: 1.1rem;
+	font-size: 1.3rem;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 	line-height: 1.4rem;
 	padding-left: 10%;
 	padding-right: 10%;
+	height: auto;
 }
 
 .contacts_body{
@@ -181,9 +183,11 @@ body {
 }
 
 .user_info{
-	margin-top: 10px;
+	margin-top: 4px;
 	margin-bottom: auto;
 	margin-left: 75px;
+	font-size: 1.7rem;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .user_info span{
