--- a/static/stylechat.css
+++ b/static/stylechat.css
@@ -5,6 +5,7 @@
 }
 
 body {
+	overflow-y: hidden;
 	min-height: 100vh;
 	background: rgb(44, 47, 59);
     background: -webkit-linear-gradient(to right, rgb(40, 59, 34), rgb(54, 60, 70), rgb(32, 32, 43));
@@ -24,14 +25,15 @@ body {
 }
 
 .card{
-	/* max-width: 100%; */
+	overflow-y: scroll;
 	border: transparent;
 	color: transparent;
 	margin-top: 5%;
 	border-radius: 15px;
 	width: 85%;
 	background-color: rgba(0,0,0,0.4) !important;
-	height: 100%;
+	height: 600px;
+	margin-bottom: 85px;
 }
 
 .addMargin {
